<resources>
    <string name="app_name">DappleyAndroidSdk</string>

    <string name="menu_wallet">Wallet</string>
    <string name="menu_step">Step</string>
    <string name="menu_me">Profile</string>

    <string name="title_transfer">Send</string>
    <string name="title_add_wallet">Add Wallet</string>
    <string name="title_create_wallet">New Wallet</string>
    <string name="title_wallet_detail">Detail</string>
    <string name="title_import_wallet">Import Wallet</string>
    <string name="title_export_wallet">Export Wallet</string>
    <string name="title_mnemonic_wallet">Save New Wallet</string>
    <string name="title_receive">Receive</string>
    <string name="title_step">Step</string>
    <string name="title_me">Profile</string>
    <string name="title_select_address">Select Wallet</string>
    <string name="title_modify_password">Change Password</string>
    <string name="title_authority">Authority Setting</string>
    <string name="title_receiver_select">Select Receiver Address</string>

    <string name="layout_receive_address">Receiver</string>
    <string name="layout_receive_address_tip">Receiver address</string>
    <string name="layout_wallet_password">Password</string>
    <string name="layout_wallet_password_tip">Wallet password</string>
    <string name="layout_transfer_amount">Amount</string>
    <string name="layout_transfer_amount_tip">Send amount</string>
    <string name="layout_transfer">Send</string>
    <string name="layout_receive">Receive</string>
    <string name="layout_balance">Detail</string>
    <string name="layout_scan">Scan</string>
    <string name="layout_copy">Copy</string>
    <string name="layout_delete_wallet">Delete</string>
    <string name="layout_wallet_name">Name</string>
    <string name="layout_wallet_name_tip">Wallet name</string>
    <string name="layout_create_wallet">New Wallet</string>
    <string name="layout_balance_records">Unspent Transactions</string>
    <string name="layout_import_type">From</string>
    <string name="layout_import_type_mnemonic">Mnemonics</string>
    <string name="layout_import_type_private_key">Private key</string>
    <string name="layout_import_mnemonic_privatekey">Private key/Mnemonics</string>
    <string name="layout_import_mnemonic_privatekey_tip">Type private key or mnemonics</string>
    <string name="layout_import_mnemonic">Mnemonics</string>
    <string name="layout_import_mnemonic_tip">Input mnemonics</string>
    <string name="layout_import_private_key">Private Key</string>
    <string name="layout_import_private_key_tip">Input private key</string>
    <string name="layout_import_wallet">Import Wallet</string>
    <string name="layout_import_btn">Import</string>
    <string name="layout_wallet_address">Address</string>
    <string name="layout_encrypt_and_save">Encrypt and Save</string>
    <string name="layout_cancel">Cancel</string>
    <string name="layout_delete">Delete</string>
    <string name="layout_confirm">Confirm</string>
    <string name="layout_ok">OK</string>
    <string name="layout_copy_address">Copy address</string>
    <string name="layout_step_today">Total Steps</string>
    <string name="layout_convert_coin">Convert Coin</string>
    <string name="layout_step_converted">Redeemed</string>
    <string name="layout_step_rest">Available</string>
    <string name="layout_coin_exchanged">Coin Exchanged</string>
    <string name="layout_btn_convert">Redeem</string>
    <string name="layout_input_wallet_password">Input wallet password</string>
    <string name="layout_menu_wallet_password">Change Password</string>
    <string name="layout_step_counter">Step Counter</string>
    <string name="layout_version">APP Update</string>
    <string name="layout_authority">Authority</string>
    <string name="layout_wallet_sege">wallet(s)</string>
    <string name="layout_wallet_old_password">Old password</string>
    <string name="layout_wallet_old_password_tip">Old wallet password</string>
    <string name="layout_wallet_new_password">New password</string>
    <string name="layout_wallet_new_password_tip">New wallet password</string>
    <string name="layout_wallet_confirm_password">Confirm</string>
    <string name="layout_wallet_confirm_password_tip">Confirmed new wallet password</string>
    <string name="layout_btn_modify_password">Change and Save</string>
    <string name="layout_copy_receive_address">Copy Address</string>
    <string name="layout_click_add_wallet">Click here to add a wallet</string>
    <string name="layout_select_step_counter">Select Step Counter</string>
    <string name="layout_yes">Yes</string>
    <string name="layout_no">No</string>
    <string name="layout_downloading">Downloading</string>
    <string name="layout_version_checking">Checking new version...</string>
    <string name="layout_version_new">New version was found, update now？</string>
    <string name="layout_version_error">Check version error</string>
    <string name="layout_download_error">Download error</string>
    <string name="layout_version_no_new">No new version</string>
    <string name="layout_miner_tip">Miner Tip</string>

    <string name="note_not_valid_wallet">The code is not a valid wallet address</string>
    <string name="note_no_valid_wallet">No valid wallet</string>
    <string name="note_balance_not_enough">Balance is not enough</string>
    <string name="note_no_receiver">Please type receiver address</string>
    <string name="note_receiver_illegal">Receiver address is illegal</string>
    <string name="note_no_password">Please type wallet password</string>
    <string name="note_error_password">Password is not correct</string>
    <string name="note_no_amount">Please type your send amount</string>
    <string name="note_error_amount">Please type a correct send amount</string>
    <string name="note_transfer_success">Send success</string>
    <string name="note_transfer_failed">Send failed, please check your inputs</string>
    <string name="note_permittion_read">Please allow read/write storage authority</string>
    <string name="note_read_failed">Read/Write data failed</string>
    <string name="note_create_wallet_failed">Create wallet failed, please try later</string>
    <string name="note_no_wallet_name">Please type a wallet name</string>
    <string name="note_no_pasword">Please type a password</string>
    <string name="note_no_pv_mnemonic">Please type private key or mnemonics</string>
    <string name="note_error_pv_mnemonic">Please type right private key or mnemonics</string>
    <string name="note_no_private_key">Please type your private key</string>
    <string name="note_error_private_key">Private key is error</string>
    <string name="note_error_import_wallet">Import wallet failed, please check you private key or mnemonic</string>
    <string name="note_wallet_exists">Wallet address already exists</string>
    <string name="note_wallet_copied">Wallet address is copied</string>
    <string name="note_wallet_private_key_copied">Wallet private key is copied</string>
    <string name="note_node_error">Connect error</string>
    <string name="note_permittion_camera">Please allow camera authority</string>
    <string name="note_press_again">Press again to exit</string>
    <string name="note_no_step">No step can be converted</string>
    <string name="note_select_address">Please select a wallet address with enough balance</string>
    <string name="note_convert_success">Successfully convert %d steps</string>
    <string name="note_convert_failed">Convert failed, please try later</string>
    <string name="note_old_password">Please type old password</string>
    <string name="note_new_password">Please type new password</string>
    <string name="note_confirm_password">Please type confirmed password</string>
    <string name="note_modify_password_diff">New passwords are different</string>
    <string name="note_old_password_error">Old password is not correct</string>
    <string name="note_modify_password_success">Modify password success</string>
    <string name="note_modify_password_failed">Modify password failed</string>
    <string name="note_remote_contract_empty">Remote contract address is empty</string>
    <string name="note_remote_contract_invalid">Remote contract address is invalid</string>
    <string name="note_confirm_title">Notice</string>
    <string name="note_confirm_delete_wallet">Sure to delete the current wallet?</string>
    <string name="note_warning_title">Warning</string>
    <string name="note_warning_mnemonic">Please write down your mnemonic/private key. When you lose your wallet or change your device, the mnemonic/private key will be the only way to restore your wallet!</string>
    <string name="note_google_fit_failed">Google Fit authentication failed</string>
    <string name="note_google_fit_unavaiable">Google Fit unavailable</string>
    <string name="note_receive_coin_failed">Get DW reward failed</string>
    <string name="note_receive_coin_success">Get DW reward success</string>
    <string name="note_receive_coin_content">You can get a free DW reward for the newly created wallet. Would you like to get the reward?</string>

    <string name="net_not_connected">Network not connected</string>
    <string name="net_server_connected_error">Server connect error, please try later</string>
    <string name="net_server_error">Server internal error, please try later</string>
    <string name="net_server_param_error">Request param error, please try later</string>
    <string name="net_unknown_error">Unknown error, please try later</string>

    <string name="error_app">Unknown error, program will exit</string>

    <string name="mobile_huawei"></string>
    <string name="mobile_xiaomi"></string>
    <string name="mobile_samsung"></string>
    <string name="mobile_lenovo"></string>
    <string name="mobile_zte"></string>
    <string name="mobile_oppo"></string>
    <string name="mobile_vivo"></string>
    <string name="mobile_meizu"></string>
    <string name="mobile_leshi"></string>
    <string name="mobile_jinli"></string>

    <string name="mobile_note_huawei"></string>
    <string name="mobile_note_xiaomi"></string>
    <string name="mobile_note_samsung"></string>
    <string name="mobile_note_lenovo"></string>
    <string name="mobile_note_zte"></string>
    <string name="mobile_note_oppo"></string>
    <string name="mobile_note_vivo"></string>
    <string name="mobile_note_meizu"></string>
    <string name="mobile_note_leshi"></string>
    <string name="mobile_note_jinli"></string>
</resources>
