<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WalletImportActivity">

    <include layout="@layout/toolbar_title_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="20dip"
        android:layout_marginRight="@dimen/margin_15">

        <TextView
            android:layout_width="92dip"
            android:layout_height="wrap_content"
            android:text="@string/layout_wallet_name" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/layout_wallet_name_tip"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="92dip"
            android:layout_height="wrap_content"
            android:text="@string/layout_wallet_password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/layout_wallet_password_tip"
            android:inputType="textPassword"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginRight="@dimen/margin_15"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="92dip"
            android:layout_height="wrap_content"
            android:text="@string/layout_import_type" />

        <RadioGroup
            android:id="@+id/rg_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_mnemoic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/layout_import_type_mnemonic" />

            <RadioButton
                android:id="@+id/rb_private_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_import_type_private_key" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_mnemonic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15">

        <TextView
            android:layout_width="92dip"
            android:layout_height="wrap_content"
            android:text="@string/layout_import_mnemonic" />

        <EditText
            android:id="@+id/et_mnemonic"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/layout_import_mnemonic_tip"
            android:minLines="2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_private_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:visibility="gone">

        <TextView
            android:layout_width="92dip"
            android:layout_height="wrap_content"
            android:text="@string/layout_import_private_key" />

        <EditText
            android:id="@+id/et_private_key"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/layout_import_private_key_tip"
            android:minLines="2" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_import"
        style="?borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="46dip"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="30dip"
        android:layout_marginRight="@dimen/margin_15"
        android:background="@drawable/btn_primary_selector"
        android:text="@string/layout_import_wallet"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>