<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModifyPasswordActivity">

    <include layout="@layout/toolbar_title_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="20dip"
        android:layout_marginRight="@dimen/margin_15"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="94dip"
            android:layout_height="wrap_content"
            android:text="@string/layout_wallet_old_password" />

        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/layout_wallet_old_password_tip"
            android:inputType="textPassword"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="94dip"
            android:layout_height="wrap_content"
            android:text="@string/layout_wallet_new_password" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/layout_wallet_new_password_tip"
            android:inputType="textPassword"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="94dip"
            android:layout_height="wrap_content"
            android:text="@string/layout_wallet_confirm_password" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/layout_wallet_confirm_password_tip"
            android:inputType="textPassword"
            android:maxLines="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_modify"
        style="?borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="46dip"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="30dip"
        android:layout_marginRight="@dimen/margin_15"
        android:background="@drawable/btn_primary_selector"
        android:text="@string/layout_btn_modify_password"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>