<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TransferActivity">

    <include layout="@layout/toolbar_title_back" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="120dip"
                android:padding="6dip" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginTop="20dip"
                android:layout_marginRight="@dimen/margin_15">

                <TextView
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:text="@string/layout_receive_address" />

                <EditText
                    android:id="@+id/et_to_address"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/layout_receive_address_tip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_15"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:text="@string/layout_wallet_password" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/layout_wallet_password_tip"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_mnemonic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_15">

                <TextView
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:text="@string/layout_transfer_amount" />

                <EditText
                    android:id="@+id/et_value"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/layout_transfer_amount_tip"
                    android:inputType="number" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_transfer"
                style="?borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="46dip"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginTop="30dip"
                android:layout_marginRight="@dimen/margin_15"
                android:background="@drawable/btn_primary_selector"
                android:text="@string/layout_transfer"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>