<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_bg"
    android:orientation="vertical"
    tools:context=".WalletCreateActivity">

    <include layout="@layout/toolbar_title_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@color/main_menu_bg"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_20"
        android:paddingTop="@dimen/margin_15"
        android:paddingRight="@dimen/margin_20"
        android:paddingBottom="@dimen/margin_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_wallet_name"
            android:textColor="@color/purple_title" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@null"
            android:hint="@string/layout_wallet_name_tip"
            android:maxLines="2"
            android:textColor="@color/purple_txt"
            android:textColorHint="@color/purple_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dip"
        android:background="@color/main_menu_bg"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_20"
        android:paddingTop="@dimen/margin_15"
        android:paddingRight="@dimen/margin_20"
        android:paddingBottom="@dimen/margin_15">

        <TextView
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:text="@string/layout_wallet_password"
            android:textColor="@color/purple_title" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@null"
            android:hint="@string/layout_wallet_password_tip"
            android:inputType="textPassword"
            android:lines="1"
            android:textColor="@color/purple_txt"
            android:textColorHint="@color/purple_hint" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_create"
        style="?borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="46dip"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="30dip"
        android:layout_marginRight="@dimen/margin_15"
        android:background="@drawable/btn_blue_selector"
        android:text="@string/layout_create_wallet"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>